--- a/style.css
+++ b/style.css
@@ -176,8 +176,17 @@ td, th{
 .itens:first-child{
 	font-weight: bold;
 }
+.itens:before{
+	content: "★";
+}
 .imagem-beneficios{
-	width: 60%
+	width: 60%;
+	opacity: 1;
+	transition: 400ms;
+	box-shadow: 10px 10px 30px #000000
+}
+.imagem-beneficios:hover{
+	opacity: 0.3;
 }
 .mapa{
 	padding: 3em 0;
@@ -194,4 +203,7 @@ td, th{
 .video{
 	width: 560px;
 	margin: 2em auto;
+}
+main .principal{
+	margin: 0 20px;
 }
